<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorites_icon"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/sell"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/messages"
        android:title="@string/title_message" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/pass"
        android:title="@string/title_profile" />

</menu>
